--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
     body {
     font-family: 'Medievalsharp', cursive;
-    background-color: #2c3e50;
+    background-color: blueviolet;
     color: #ecf0f1;
     display: flex;
     justify-content: center;
